feat: add shortcode instructions to all pages

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -18,3 +18,12 @@ body {
     padding: 0.2em 0.5em;
     border-radius: 0.5em;
 }
+
+.install-shortcode {
+    padding-bottom: 1.5em;
+    border-bottom: 4px dotted #209fa1;
+}
+
+.install-shortcode h4 {
+    margin: 0 0 1em;
+}
