--- a/themes/hugo-shortcodes/layouts/shortcodes/github-button.html
+++ b/themes/hugo-shortcodes/layouts/shortcodes/github-button.html
@@ -2,8 +2,8 @@
 {{/* If you have any problems, check the latest version in this repository */}}
 
 {{- $type := .Get "type" | default "star" -}}
-{{- $owner := .Get "owner" -}}
-{{- $repo := .Get "repo" -}}
+{{- $owner := .Get "owner" | default .Site.Params.HugoShortcodes.Github.Owner | default "" -}}
+{{- $repo := .Get "repo" | default .Site.Params.HugoShortcodes.Github.Repository | default "" -}}
 {{- $large := .Get "large" | default false -}}
 {{- $height := 20 -}}
 {{- $width := 150 -}}
