--- a/themes/hugo-shortcodes/layouts/shortcodes/github-button.html
+++ b/themes/hugo-shortcodes/layouts/shortcodes/github-button.html
@@ -34,6 +34,7 @@
 {{- end -}}
 
 <iframe
+    class="hugo-shortcodes-github-button"
     src="{{ $url | safeURL }}"
     width="{{ .Get "width" | default $width }}" height="{{ $height }}"
     frameborder="0" scrolling="0"
