--- a/themes/hugo-shortcodes/layouts/shortcodes/codepen.html
+++ b/themes/hugo-shortcodes/layouts/shortcodes/codepen.html
@@ -10,7 +10,7 @@
 {{- $tab := .Get "tab" | default "result" -}}
 {{- $style := .Get "style" | default "height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" -}}
 
-<figure>
+<figure class="hugo-shortcodes-codepen">
     <p class="codepen" data-height="{{ $height }}" data-theme-id="{{ $theme }}" data-default-tab="{{ $tab }}" data-slug-hash="{{ $id }}" data-user="{{ $author }}" style="{{ $style }}">
         <span>See the Pen <a href="https://codepen.io/{{ $author }}/pen/{{ $id }}">{{ $title }}</a> by (<a href="https://codepen.io/{{ $author }}">@{{ $author }}</a>)
         on <a href="https://codepen.io">CodePen</a>.</span>
